fixed photo size on mobile as chrome had error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,9 @@ header {
     margin: 10px auto;
 }
 
+summary::-webkit-details-marker{
+     color:transparent;
+}
 
 ::marker{
     color:transparent;
@@ -80,13 +83,13 @@ hr{
 
 .main-image{
     padding: 0;
-    max-width: 600px;
-    max-height: 600px;
+    width: 350px;
+    height: 350px;
     border-style: solid;
     border-color: #cccccc;
     border-width: 1px;
     border-radius: 50%;
-    position: relative;
+  
     margin: 20px auto 20px;
     display: block;
 
@@ -248,5 +251,17 @@ button[type="submit"] {
  .title-spacing{
 margin-top: 40px;
  }
+.main-image{
+    padding: 0;
+    width: 400px;
+    height: 400px;
+    border-style: solid;
+    border-color: #cccccc;
+    border-width: 1px;
+    border-radius: 50%;
+  
+    margin: 20px auto 20px;
+    display: block;
 
+}
 }
